<resources>
    <string name="app_name">BookTracker</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">My Books</string>
    <string name="menu_borrowed">Borrowed Books</string>
    <string name="menu_available">Available Books</string>
    <string name="menu_find">Find Books</string>
    <string name="menu_scan">Scan Book</string>
    <string name="menu_incoming">Incoming Requests</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_notifications">Notifications</string>
    <string name="action_view_user">View User</string>
    <string name="menu_accepted">Accepted Requests</string>
    <string name="menu_requested">Requested Books</string>
    <string name="view_pickup_location">View Pickup Location</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="request_text">Request</string>
    <string name="accept_text">Accept</string>
    <string name="decline_text">Decline</string>
    <string name="google_map_api_key">AIzaSyDaO4CGOZFx6dxeAmnon9dtg-_OWNHIfAY</string>
    <string name="add_book_text">Add Book</string>
    <string name="return_book_text">Return Book</string>
    <string name="receive_book_text">Receive Book</string>
    <string name="borrow_book_text">Borrow Book</string>
    <string name="give_book_text">Give Book</string>
    <string name="edit_profile_title"><u>Edit Contact Information</u></string>
    <string name="filter_books"><u>Filters</u></string>


</resources>