<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/viewbook_status"
        android:layout_width="405dp"
        android:layout_height="43dp"
        android:layout_marginTop="380dp"
        android:gravity="center"
        android:text="Status"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewbook_isbn"
        android:layout_width="411dp"
        android:layout_height="36dp"
        android:layout_marginTop="544dp"
        android:gravity="center"
        android:text="Isbn"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewbook_owner"
        android:layout_width="401dp"
        android:layout_height="37dp"
        android:layout_marginTop="492dp"
        android:gravity="center"
        android:text="Owner"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewbook_borrower"
        android:layout_width="405dp"
        android:layout_height="43dp"
        android:layout_marginTop="436dp"
        android:gravity="center"
        android:text="Borrower"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewbook_desc"
        android:layout_width="405dp"
        android:layout_height="36dp"
        android:layout_marginTop="328dp"
        android:gravity="center"
        android:text="Description"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewbook_title"
        android:layout_width="407dp"
        android:layout_height="32dp"
        android:layout_marginTop="232dp"
        android:gravity="center"
        android:text="Book Title"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/viewbook_image"
        android:layout_width="108dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_stock_book_photo_foreground" />

    <TextView
        android:id="@+id/viewbook_author"
        android:layout_width="406dp"
        android:layout_height="34dp"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:text="Book Author"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/add_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_book_text" />

        <Button
            android:id="@+id/return_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/return_book_text" />

        <Button
            android:id="@+id/receive_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/receive_book_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>